--- a/public/docker-en-2025-le-guide-ultime-pour-débutants/index.html
+++ b/public/docker-en-2025-le-guide-ultime-pour-débutants/index.html
@@ -47,6 +47,7 @@ S'abonner gratuitement</button></form></div></div></section><script>document.add
                     </div>
                 `;this.indicator.insertAdjacentHTML("beforeend",e),setTimeout(()=>{this.hideIndicator()},3e3)}}throttle(e,t){let n;return function(){const s=arguments,o=this;n||(e.apply(o,s),n=!0,setTimeout(()=>n=!1,t))}}}new t,console.log("📖 Système de progression de lecture activé")})</script></main><footer class="footer"><div class="container"><div class="footer-content"><div class="footer-section"><h3>Kyrostech - Blog IA & Tech</h3><p>Blog spécialisé en Intelligence Artificielle, Technologies et Systèmes. Articles quotidiens sur les dernières innovations tech avec explications accessibles.</p></div><div class="footer-section"><h3>Navigation</h3><div class="footer-links"><a href="/">Accueil</a>
 <a href="/posts/">Articles</a>
+<a href="/favorites/">❤️ Favoris</a>
 <a href="/search/">🔍 Recherche</a>
 <a href="/categories/">Catégories</a>
 <a href="/about/">À propos</a>
