--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@ S'abonner gratuitement</button></form></div></div></section><section class="feat
 <time class="article-date">20 Jul 2025</time></div><h3 class="article-title"><a href="http://localhost:1313/docker-en-2025-le-guide-ultime-pour-d%C3%A9butants/">Docker en 2025 : Le guide ultime pour débutants</a></h3><p class="article-excerpt"><h1 id="-docker-en-2025--le-guide-ultime-pour-débutants">🐳 Docker en 2025 : Le guide ultime pour débutants</h1><p>Docker a révolutionné la manière dont nous développons et déployons des applications. En 2025, il …</p></p><div class="article-footer"><div class="reading-time">⏱️ 1 min de lecture</div><a href="http://localhost:1313/docker-en-2025-le-guide-ultime-pour-d%C3%A9butants/" class="read-more">Lire l'article
 <span>→</span></a></div></div></article></div></div></section></main><footer class="footer"><div class="container"><div class="footer-content"><div class="footer-section"><h3>Kyrostech - Blog IA & Tech</h3><p>Blog spécialisé en Intelligence Artificielle, Technologies et Systèmes. Articles quotidiens sur les dernières innovations tech avec explications accessibles.</p></div><div class="footer-section"><h3>Navigation</h3><div class="footer-links"><a href="/">Accueil</a>
 <a href="/posts/">Articles</a>
+<a href="/favorites/">❤️ Favoris</a>
 <a href="/search/">🔍 Recherche</a>
 <a href="/categories/">Catégories</a>
 <a href="/about/">À propos</a>
