--- a/public/series/index.html
+++ b/public/series/index.html
@@ -8,10 +8,10 @@ Kyrostech - Blog IA & Tech</a><nav class="main-nav"><ul class="nav-menu" id="nav
 </button>
 <button class="mobile-toggle" id="mobile-toggle" aria-label="Menu mobile">☰</button></div></div></header><main class="main"><div class="container" style="padding:2rem;margin-top:4rem"><h1>Series</h1><p></p><p>Aucun contenu trouvé.</p></div></main><footer class="footer"><div class="container"><div class="footer-content"><div class="footer-section"><h3>Kyrostech - Blog IA & Tech</h3><p>Blog spécialisé en Intelligence Artificielle, Technologies et Systèmes. Articles quotidiens sur les dernières innovations tech avec explications accessibles.</p></div><div class="footer-section"><h3>Navigation</h3><div class="footer-links"><a href="/">Accueil</a>
 <a href="/posts/">Articles</a>
-<a href="/favorites/">❤️ Favoris</a>
 <a href="/search/">🔍 Recherche</a>
+<a href="/favorites/">❤️ Favoris</a>
 <a href="/categories/">Catégories</a>
 <a href="/about/">À propos</a>
 <a href="/contact/">Contact</a></div></div><div class="footer-section"><h3>Réseaux sociaux</h3><div class="footer-links"><a href="https://twitter.com/kyrostechdev" target="_blank" rel="noopener">Twitter</a>
 <a href="https://github.com/kyrostech" target="_blank" rel="noopener">GitHub</a>
-<a href="https://linkedin.com/in/kyrostech" target="_blank" rel="noopener">LinkedIn</a></div></div></div><div class="footer-bottom"><p>&copy; 2025 Kyrostech. Tous droits réservés.</p></div></div></footer><script src="http://localhost:1313/js/main.js"></script><script>"serviceWorker"in navigator&&window.addEventListener("load",()=>{navigator.serviceWorker.register("/sw.js").then(e=>console.log("SW registered")).catch(e=>console.log("SW registration failed"))})</script></body></html>
+<a href="https://linkedin.com/in/kyrostech" target="_blank" rel="noopener">LinkedIn</a></div></div></div><div class="footer-bottom"><p>&copy; 2025 Kyrostech. Tous droits réservés.</p></div></div></footer><script src="http://localhost:1313/js/main.js"></script><script src="http://localhost:1313/js/favorites.js"></script><script>"serviceWorker"in navigator&&window.addEventListener("load",()=>{navigator.serviceWorker.register("/sw.js").then(e=>console.log("SW registered")).catch(e=>console.log("SW registration failed"))})</script></body></html>
